--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "author": "ajit",
   "license": "ISC",
   "dependencies": {
-    "@google/generative-ai": "^0.21.0",
+    "@google/generative-ai": "^0.13.0",
     "axios": "^1.7.9",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "nodemon": "^3.1.9"
+    "install": "^0.13.0",
+    "nodemon": "^3.1.9",
+    "npm": "^11.6.1"
   }
 }
