--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "axios": "^1.7.9",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "install": "^0.13.0",
     "nodemon": "^3.1.9",
-    "npm": "^11.6.1"
+    "npm": "^11.6.1",
+    "openai": "^6.2.0"
   }
 }
